<resources>
    <string name="_2FA">2FA - OTP</string>
    <string name="_2FA_SMS">2FA - SMS Read</string>
    <string name="_3des_enc_pass">3hpAndro</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="ads_unit_2fa">ca-app-pub-8474731879788478/4839510867</string>
    <string name="ads_unit_http_traffic">ca-app-pub-8474731879788478/1566066601</string>
    <string name="ads_unit_https_traffic">ca-app-pub-8474731879788478/9517122475</string>
    <string name="ads_unit_internal_storage">ca-app-pub-8474731879788478/9082503042</string>
    <string name="ads_unit_logs">ca-app-pub-8474731879788478/4615385248</string>
    <string name="ads_unit_preference_storage">ca-app-pub-8474731879788478/6100922960</string>
    <string name="ads_unit_sqlite_unencrypted">ca-app-pub-8474731879788478/2105729839</string>
    <string name="ads_unit_tcp_traffic">ca-app-pub-8474731879788478/9078138776</string>
    <string name="ads_unit_udp_traffic">ca-app-pub-8474731879788478/3825812090</string>
    <string name="aes_enc_iv">RaviRamesh</string>
    <string name="aes_enc_pass">hpAndro</string>
    <string name="app_backup">App Backup</string>
    <string name="app_id">ca-app-pub-8474731879788478~6023519112</string>
    <string name="app_name">Android Security Testing</string>
    <string name="app_name1">Traffic Analysis Testing</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_lock">Application lock</string>
    <string name="banner_ad">ca-app-pub-8474731879788478/4970098378</string>
    <string name="biometric">Biometric</string>
    <string name="blowfish_enc_pass">hpAndro</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="btnStart">Start</string>
    <string name="btnTips">Tips</string>
    <string name="busybox_binaries">BusyBox Binaries</string>
    <string name="call_hidden_activity">Call <b>Hidden Activity</b> to perform this task.</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_credentials">Confirm Credentials</string>
    <string name="content_provider">Content Providers</string>
    <string name="ctf">You can verity your flag at <b><u>ctf.hpandro.raviramesh.info</u></b></string>
    <string name="dangerous_props">Dangerous Props</string>
    <string name="debug_logs">Debug Logs</string>
    <string name="debugger_detection">Debugger detection</string>
    <string name="deeplink">Deeplink</string>
    <string name="default_web_client_id">638257579638-0mjm42lg7dr453391usnhie5hcr0tu4g.apps.googleusercontent.com</string>
    <string name="des_enc_pass">hpAndro1</string>
    <string name="efab_efab_illegal_optional_properties">"One or more optional attributes for an ExpandableFab were set, but didn't meet the criteria below: 

 Optional Attribute || Criteria 
 orientation || must be a value of enum class Orientation 
 efabColor || must be an integer color or color state list 
 efabIcon || must be a color or drawable resource 
 efabSize || must be [FabSize.MINI], [FabSize.NORMAL], [FabSize.AUTO] or [FabSize.CUSTOM]. FabSize.CUSTOM should be used when setting the size of the ExpandableFab's layout_width and layout_height to a custom value manually. 
 efabEnabled || must be a boolean 
 iconRotationDeg || must be a floating point number 
 fabOptionSize || must be [FabSize.MINI], [FabSize.NORMAL], [FabSize.AUTO] or [FabSize.CUSTOM]. FabSize.CUSTOM should be used when setting the size of the FabOptions' layout_width and layout_height to a custom value manually. 
 fabOptionPosition || must be a value of enum class FabOptionPosition 
 firstFabOptionMarginPx || must be a floating point number 
 successiveFabOptionMarginPx || must be a floating point number 
 openingAnimationDurationMs || must be a positive long number 
 closingAnimationDurationMs || must be a positive long number 
 closingAnticipateTension || must be a positive float number 
"</string>
    <string name="efab_faboption_illegal_optional_properties">"One or more optional attributes for a FabOption were set, but didn't meet the criteria below: 

 Optional Attribute || Criteria 
 orientation || must be a value of enum class Orientation 
 fabOptionColor || must be an integer color or color state list 
 fabOptionIcon || must be a color or drawable resource 
 fabOptionEnabled || must be a boolean 
 openingAnimationDurationMs || must be a positive long number 
 closingAnimationDurationMs || must be a positive long number 
 openingOvershootTension || must be a positive long number 
"</string>
    <string name="efab_label_illegal_optional_properties">"One or more optional attributes for a Label were set, but didn't meet the criteria below: 

 labelText || must be a CharSequence 
 labelTextColor || must be an integer color or color state list 
 labelTextSize || must be a positive floating point number 
 labelBackgroundColor || must be an integer color or color state list 
 labelElevation || must be a positive floating point number 
 labelEnabled || must be a boolean 
 position || must be a value of enum class [LabelPosition] 
 marginPx || must be a positive floating point number 
 translationXPx || must be a floating point number 
 visibleToHiddenAnimationDurationMs || must be a positive long number 
 hiddenToVisibleAnimationDurationMs || must be a positive long number 
 overshootTension || must be a positive floating point number 
"</string>
    <string name="efab_layout_multiple_efabs">You can only set one ExpandableFab per orientation in an ExpandableFabLayout (you set 2 or more for the %s orientation).</string>
    <string name="efab_layout_must_be_child_of_expandablefab_layout">Overlays, ExpandableFabs and FabOptions must be children of an [ExpandableFabLayout] in order to function properly. Please see the documentation for how to correctly use the ExpandableFab widget.</string>
    <string name="efab_overlay_illegal_optional_properties">"One or more optional attributes for an Overlay were set, but didn't meet the criteria below: 

 Optional Attribute || Criteria 
 orientation || must be a value of enum class Orientation 
 overlayColor || must be an integer color or color state list 
 overlayAlpha || must be a positive floating point number 
 openingAnimationDurationMs || must be a positive long number 
 closingAnimationDurationMs || must be a positive long number 
"</string>
    <string name="emulator_detection">Emulator detection</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_logs">Error Logs</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="external_storage">External Storage</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="http_traffic">HTTP Traffic</string>
    <string name="https_traffic">HTTPS Traffic</string>
    <string name="non_http_traffic_title">Non-HTTP Traffic</string>
    <string name="public_key_pinning_1">Public Key Pinning 1</string>
    <string name="public_key_pinning_2">Public Key Pinning 2</string>
    <string name="public_key_pinning_3">Public Key Pinning 3</string>
    <string name="public_key_pinning_title">Public Key Pinning</string>
    <string name="tcp_traffic">TCP Traffic</string>
    <string name="title_http_traffic">HTTP Traffic</string>
    <string name="udp_traffic">UDP Traffic</string>
    <string name="web_socket">Web Socket (WS)</string>
    <string name="web_socket_secure">Web Socket Secure (WSS)</string>
    <string name="websocket_traffic_title">WebSocket Traffic</string>
</resources>